# databricks-rag

./: README.md  pyproject.toml
notebooks/: 01_data_ingestion.py  02_vector_index_provisioning.py  03_mlflow_rag_chain.py
src/db_rag_app/: __init__.py  ingestion.py  rag_chain.py  vector_index.py
